k8s/applications/services/homeautomation/scrypted/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scrypted
spec:
  selector:
    matchLabels:
      app: scrypted
  serviceName: "scrypted"
  replicas: 1
  template:
    metadata:
      #annotations:
      #  k8s.v1.cni.cncf.io/networks: macvlan-conf
      labels:
        app: scrypted
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted:full
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "1"
          ports:
          - containerPort: 10443
            protocol: TCP
            name: https
          - containerPort: 11080
            protocol: TCP
            name: http
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: scrypted-data
            mountPath: /server/volume
          - name: dbus
            mountPath: /var/run/dbus
          - name: host-avahi-daemon
            mountPath: /var/run/avahi-daemon/socket
      volumes:
      - name: dbus
        hostPath:
          path: /var/run/dbus
      - name: host-avahi-daemon
        hostPath:
          path: /var/run/avahi-daemon/socket
  volumeClaimTemplates:
  - metadata:
      name: scrypted-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: "vault-fast-nfs"
      resources:
        requests:
          storage: 1Gi
