k8s/applications/services/homeautomation/scrypted/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  - name: http
    port: 80
    targetPort: http
  selector:
    app: scrypted
